# aur-pkgbuilder

./: .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PKGBUILD-bin  README.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.cursor/commands/: check-pr.md  git-staged-msg.md  issue-new.md  pr-update.md  pr.md  readme-update.md  release-new.md  summary.md  wiki-update.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql.yml  lint.yml  release.yml  rust.yml  security.yml
Release-docs/: RELEASE_v0.1.0.md
config/: i18n.yml
config/locales/: de-DE.yml  en-US.yml
data/: aur-pkgbuilder.desktop
dev/: Designing a Standalone GUI to Guide Maintainers Through the Full AUR Package Lifecycle.md  GUI_Lifecycle_Plan_Combined.md  Makefile  compass_artifact_wf-dcbb91e9-0931-4f4f-8a6e-b801c2f5a1af_text_markdown.md
dev/ANNOUNCEMENTS/: version_announcement_content.md
dev/RELEASE/: release-report-0.1.0-20260420-001442.txt  release-report-0.1.0-20260420-001906.txt  release-report-0.1.0-20260420-002526.txt  release-report-0.1.0-20260420-003247.txt  release-report-pending-20260420-001854.txt
dev/docs/: GUI_Lifecycle_Plan_Combined.md  REGISTER_NEW_AUR_PACKAGE_PLAN.md
dev/scripts/: aur-push.sh  clippy_cognitive_complexity.sh  clippy_errors.sh  generate_docs.sh  module_structure.sh  release.sh  security-check.sh  update-sha256sums.sh
src/: app.rs  config.rs  i18n.rs  main.rs  runtime.rs  state.rs
src/ui/: aur_ssh.rs  build.rs  connection.rs  folder_pick.rs  home.rs  log_view.rs  (+15 more)
(+16 files in other folders)
