[package]
name = "aur-pkgbuilder"
version = "0.1.0"
edition = "2024"
description = "GTK4/libadwaita GUI for building, validating, and publishing AUR packages"
license = "MIT"
repository = "https://github.com/Firstp1ck/aur-pkgbuilder"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_6"] }
glib = "0.22"
gio = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "sync", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json_comments = "0.2"
dirs = "5"
once_cell = "1"
futures-util = "0.3"
async-channel = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
